--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,19 +119,19 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 
-@font-face {
+/* @font-face {
   font-family: 'qpc-v1';
-  src: url('../../public/fonts/qpc/v1/p1.woff2') format('woff2');
+  src: url('../../public/fonts/qpc/v1/p604.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
-}
+} */
 
-@font-face {
-  font-family: 'qpc-v2';
+/* @font-face {
+  font-family: 'qpc-v2-p1';
   src: url('../../public/fonts/qpc/v2/p1.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
-}
+} */
 
 @font-face {
   font-family: 'chapters';
